# curc

./: .gitignore  README.md  README.rst  main.py  pyproject.toml
curc/: __init__.py  __main__.py
